2004-11-29  Ken Kocienda  <kocienda@apple.com>

        Reviewed by Harrison

        Small improvements to the node-display debugging helpers.

        * khtml/xml/dom_nodeimpl.cpp:
        (NodeImpl::displayTree): Make the rootNode be this if there is no rootEditableElement.
        * khtml/xml/dom_nodeimpl.h: Make displayNode take a default argument of "" for its string.

2004-11-29  Ken Kocienda  <kocienda@apple.com>

        Reviewed by Harrison

        * khtml/editing/htmlediting.cpp:
        (khtml::DeleteSelectionCommand::handleGeneralDelete): The downstream position in this function 
        may need to be adjusted when deleting text off the front part of a text node. This fixes a problem 
        I discovered while improving the paste command, where the insertion poitn wound up in the wrong
        place after the delete. 

2004-11-29  Ken Kocienda  <kocienda@apple.com>

        Reviewed by Harrison

        Add a new helper function to insert a paragraph separator. Will be used in my
        upcoming paste improvments.

        * khtml/editing/htmlediting.cpp: Added function
        (khtml::CompositeEditCommand::insertParagraphSeparator)
        * khtml/editing/htmlediting.h: Ditto.

2004-11-23  David Harrison  <harrison@apple.com>

        Added various comments.

        * khtml/editing/htmlediting.cpp:
        (khtml::StyleChange::init):
        (khtml::ApplyStyleCommand::doApply):
        (khtml::ApplyStyleCommand::applyBlockStyle):
        (khtml::ApplyStyleCommand::applyInlineStyle):

2004-11-23  David Hyatt  <hyatt@apple.com>

	Hit testing in table cells with top/bottom space from vertical alignment didn't work.  I forgot about the
	super-secret yPos() lie that table cells do.  Use m_y instead of yPos().

        * khtml/rendering/render_block.cpp:
        (khtml::RenderBlock::nodeAtPoint):

2004-11-22  David Hyatt  <hyatt@apple.com>

	Make sure you can use document.createElement to make a <canvas> element.

        * khtml/xml/dom_docimpl.cpp: